src/main/assets/scss/main.scss
@use 'govuk-frontend' as *;

@use 'phase-banner';
@use 'service-navigation';
@use 'timeout-modal';

.section-border {
  border: 1px solid govuk-colour('blue');
}

.dashboard-notifications {
  .govuk-notification-banner {
    margin-bottom: govuk-spacing(4);
  }
  .govuk-notification-banner:last-child {
    margin-bottom: 0;
  }
}

.govuk-header__content {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.claim-journey-secondary-heading {
  color: $govuk-secondary-text-colour;
  font-weight: 300;
}

.correspondence-address-form {
  .pcs-address-component {
    .govuk-details__text {
      border-left: none;
      padding-left: 0;
      padding-bottom: 0;
      position: relative;

      &::before {
        content: '';
        display: block;
        position: absolute;
        top: -5px;
        left: -40px;
        width: 5px;
        height: 15px;
        background-color: govuk-colour('white');
      }
    }

    .govuk-details {
      margin-bottom: 5px;
    }
  }

  #correspondenceAddress-addressSelectContainer {
    margin-bottom: 30px;
  }
}

.govuk-footer__meta-item .govuk-footer__link {
  display: inline-block;
  line-height: 1.5;
  padding-top: 4px;
  padding-bottom: 4px;
}

